fix event calendar alignment

--- a/frontend/app/src/components/SpecialEventCalendar/SpecialEventCalendar.module.scss
+++ b/frontend/app/src/components/SpecialEventCalendar/SpecialEventCalendar.module.scss
@@ -64,7 +64,6 @@
             font-size: 60px;
             font-weight: bold;
             line-height: 70px;
-            padding: 0 1rem;
         }
     }
 
